feat: appointments deletion handling
